--- a/static/style.css
+++ b/static/style.css
@@ -12,13 +12,6 @@ body {
 }
 
 *, html {
-    /*
-    --primaryGradient: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
-    --secondaryGradient: linear-gradient(268.91deg, #581B98 -2.14%, #9C1DE7 99.69%);
-    --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-    --secondaryBoxShadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
-    --primary: #581B98;
-    background-image: linear-gradient( 135deg, #57eb9a 10%, #28C76F 100%); */
     --primaryGradient: linear-gradient(135deg, #52E5E7 10%, #0396FF 100%);
     --secondaryGradient: linear-gradient(268.91deg, #52E5E7 -2.14%, #0396FF 99.69%);
     --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
@@ -26,15 +19,14 @@ body {
     --primary: #0396FF;
 }
 
-/* CHATBOX
-=============== */
+/* CHATBOX */
 .chatbox {
     position: absolute;
     top:  50px;
     left: 220px;
 }
 
-/* CONTENT IS CLOSE  background-image: linear-gradient( 135deg, #ABDCFF 10%, #0396FF 100%);*/
+/* CONTENT IS CLOSE */
 .chatbox__support {
     display: flex;
     flex-direction: column;
@@ -46,18 +38,16 @@ body {
     transition: all .5s ease-in-out;
 }
 
-/* CONTENT ISOPEN */
+/* CONTENT IS OPEN */
 .chatbox--active {
     transform: translateY(10px);
     z-index: 123456;
     opacity: 1;
-
 }
 
 /* BUTTON */
 .chatbox__button {
     text-align: left;
-    
 }
 
 .send__button {
@@ -66,9 +56,7 @@ body {
     border: none;
     outline: none;
     cursor: pointer;
-       
 }
-
 
 /* HEADER */
 .chatbox__header {
@@ -195,7 +183,6 @@ body {
     color: white;
     font-size: 1rem;
     cursor: pointer;
-    
 }
 
 .chatbox__button button,
@@ -208,9 +195,9 @@ body {
     border-radius: 50px;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    position :absolute;
-    top : 700px;
-    left : 730px;
+    position: absolute;
+    top: 700px;
+    left: 730px;
 }
 
 .respondcard {
@@ -239,7 +226,6 @@ body {
     text-align: center;
     font-size: 20px;
     font-weight: 500;
-
 }
 
 .hide {
@@ -250,7 +236,7 @@ body {
     padding: 10px;
     display: none;
 }
-      
+
 .myDIV:hover + .hide {
     display: block;
 }
